spring-app/spring-app-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-engineer-app
  namespace: default
  labels:
    app: engineer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engineer
  template:
    metadata:
      labels:
        app: engineer
        name: spring
    spec:
      containers:
        - name: engineer-container
          image: docker.io/siri9911/spring-postgres-rest-app     #spring-app
          ports:
            - containerPort: 8077
