spring-app/spring-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-engineer-service
  namespace: default
  labels:
    name: spring
    app: engineer
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8077
      targetPort: 8077
  selector:
    app: engineer
    name: spring
