spring-app/spring-app-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-ingress
spec:
  rules:
  - host: spring-app-service.io
    http:
      paths:
      - path: /engineer
        pathType: Prefix
        backend:
          service:
            name: spring-app-service
            port:
              number: 8077
